2001-05-15  Paolo Maggi  <maggi@athena.polito.it>

	* print.c: #included "print-util.h" to silent a warning

2001-05-10  Paolo Maggi  <maggi@athena.polito.it>

	* document.c (remove_child_cb): msgbox parented

	* plugin.c (gedit_plugins_menu_add): hint for "Manager..." menu entry
	  set to "Manage available plugin modules" (like in Gnumeric)

	* prefs.[ch]: Preferences::use_fontset removed

	* view.c (gedit_view_set_font): now gedit can use fontsets

	* dialogs/plugin-manager.glade: cosmetic changes

2001-04-23  Jason Leach  <jasonleach@usa.net>

	* debug.[ch]: New files, split off the debugging stuff from
	utils.[ch] and put them here.

2001-04-02  Paolo Maggi  <maggi@athena.polito.it>

	* dialogs/dialo-plugins.c: fix typo in
	GEDIT_PLUGIN_MANAGER_GLADE_FILE

2001-04-02  Paolo Maggi  <maggi@athena.polito.it>

	* dialogs/uri.glade: changed the title of the dialog to
	"Open from URI..."

	* dialogs/dialog-about.c (dialog_about): set a parent for the about 
	dialog

	* dialogs/about.glade: set visible to FALSE

2001-03-28  Paolo Maggi  <maggi@athena.polito.it>

	* dialogs/gtkchecklist.h: new file

	* dialogs/gtkchecklist.c: new file
	
	* dialogs/Makefile.am (libdialogs_a_SOURCES): added gtkchecklist.h
	and gtkchecklist.c

	* dialogs/dialog-plugins.c: 
	* dialogs/plugin-manager.glade: 
	* dialogs/plugin-manager.glade.h: rewritten for the new plugin manager

2001-03-28  Jason Leach  <jasonleach@usa.net>

	* view.h (struct _GeditToolbar): chaned the @undo and @redo to
	1-bit gboolean instead of gint types.

	* search.c: S/DEBUG_RECENT/DEBUG_SEARCH/ everywhere in here.

2001-03-24  Chema Celorio  <chema@celorio.com>

	* view.c (gedit_event_key_press): fix a long time know
	nasty code

2001-03-19  Paolo Maggi  <maggi@athena.polito.it>

	* document.c (gedit_document_load): new check on URI

	* menus.c: comment the File Info menu item. Now we have the
	Document Info plugin

	* search.c (file_info)(gedit_file_info_cb): commented with #if0 
	(should I remove them?)
