@@ -1,5 +1,10 @@
 2001-05-15  Paolo Maggi  <maggi@athena.polito.it>
 
+	* document.c (gedit_document_get_buffer): clean the code and
+	update documentation 
+
+2001-05-15  Paolo Maggi  <maggi@athena.polito.it>
+
 	* print.c: #included "print-util.h" to silent a warning
 
 2001-05-10  Paolo Maggi  <maggi@athena.polito.it>
